style.css
/* ... */
#btn__letter i {
    margin-left: 5px;
}

#btn__letter:hover {
    border-color: var(--color-heart);
    background-color: var(--color-heart);
    color: #fff;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

#btn__letter:hover i {
    animation: rotateHeart 1s infinite linear;
}

@keyframes rotateHeart {

    0%,
    50%,
    100% {
        transform: rotate(0deg);
    }

    25% {
        transform: rotate(12deg);
    }

    75% {
        transform: rotate(-12deg);
    }
}

.title {
    position: relative;
    width: 100%;
    display: flex;
    justify-content: center;
    font-family: "Titan One", sans-serif;
    font-size: 3rem;
    flex-direction: column;
    perspective: 1000px;
}

.title .happy,
.title .birthday {
    position: relative;
    text-shadow: 4px 4px var(--color-black),
        -4px 4px var(--color-black),
        4px -4px var(--color-black),
        -4px -4px var(--color-black),
        4px 8px 0 var(--color-black);
    font-weight: bold;
    display: flex;
    justify-content: center;
}

.title .happy {
    color: var(--color-white);
}

.title .happy span,
.title .birthday span {
    transform: translateY(50px);
    opacity: 0;
    visibility: hidden;
    animation: txtTranslateY .5s var(--t) forwards;
}

@keyframes txtTranslateY {
    100% {
        transform: translateY(0);
        opacity: 1;
        visibility: visible;
    }
}

.title .birthday {
    color: var(--color-text-pink);
}

.title .hat {
    position: absolute;
    right: 45px;
    top: -350px;
    transform: rotate(-40deg);
    z-index: -1;
    animation: topHat 4s 7s forwards ease;
}

@keyframes topHat {

    20%,
    30% {
        top: -30px;
        transform-origin: left;
        transform: rotate(-40deg);
    }

    35%,
    100% {
        top: -30px;
        transform: rotate(0deg);
    }
}

.date__of__birth,
.name {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: var(--color-text-pink);
    border-radius: 50px;
    margin-top: 20px;
    font-family: "Sriracha", cursive;
    padding: 0 20px;
}

.name span {
    flex: 1;
    text-align: center;
}

.date__of__birth {
    border: 3px solid var(--color-black);
    position: relative;
    transform: translateY(-100px);
    z-index: -1;
    opacity: 0;
    visibility: hidden;
    width: 0px;
    animation: dateOfBirth 5s 9s forwards;
}

@keyframes dateOfBirth {

    20%,
    40% {
        width: 0px;
        height: 0;
        transform: translateY(0px);
        opacity: 1;
        visibility: visible;
    }

    45% {
        transform: translateY(0px);
        opacity: 1;
        visibility: visible;
        width: 300px;
        height: 0px;
    }

    50%,
    100% {
        transform: translateY(0px);
        opacity: 1;
        visibility: visible;
        width: 300px;
        height: 70px;
    }
}

.name {
    position: absolute;
    padding: 0px 40px;
    bottom: -20px;
    border: 3px solid var(--color-black);
}

.date__of__birth span,
.name span {
    font-weight: bold;
    margin: 0px 40px;
}

.date__of__birth span {
    font-size: 1.2rem;
}

.name span {
    font-size: 1.7rem;
}

.right .box__account {
    position: relative;
    transform: translateY(700px);
    animation: topBoxImage 8s 7s forwards ease-in;
}

@keyframes topBoxImage {
    to {
        transform: translateY(0);
    }
}

.content .right .image {
    position: relative;
    width: 400px;
    height: 400px;
    border-radius: 50%;
    overflow: hidden;
    display: flex;
    align-items: center;
    border: 6px solid var(--color-black);
}

.content .right .image img {
    width: 100%;
    object-fit: cover;

}

.cricle {
    position: absolute;
    top: 20px;
    right: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
    transform: scale(0);
    animation: scaleCricle 3s 15s forwards ease-in-out;
}

@keyframes scaleCricle {
    0% {
        transform: scale(0);
    }

    10% {
        transform: scale(1.3);
    }

    20% {
        transform: scale(0.7);
    }

    30%,
    100% {
        transform: scale(1);
    }

}

.text__cricle {
    width: 100px;
    height: 100px;
    background-color: var(--color-text-pink);
    border-radius: 50%;
    border: 5px solid var(--color-black);
    display: flex;
    justify-content: center;
    align-items: center;
    animation: rotateCricle 5s linear infinite;
}

@keyframes rotateCricle {
    to {
        transform: rotate(360deg);
    }
}

.text__cricle span {
    top: 0%;
    left: 50%;
    position: absolute;
    color: var(--color-black);
    transform: rotate(calc(var(--i) * 24deg));
    transform-origin: 0 45px;
    font-family: "Sriracha", cursive;
    text-transform: uppercase;
    font-size: 0.7rem;
}

.fa-heart {
    color: var(--color-heart);
    filter: drop-shadow(0 0 3px var(--color-heart));
    animation: scaleHeart 1s infinite linear;
}

.cricle .fa-heart {
    position: absolute;
    transform: scale(0.85);
}

@keyframes scaleHeart {
    50% {
        transform: scale(1.2);
    }
}

.right .balloon_one {
    position: absolute;
    top: -70px;
    left: -70px;
    animation: balloon1 2s infinite linear;
}

@keyframes balloon1 {

    0%,
    50%,
    100% {
        transform-origin: bottom right;
        transform: rotate(0deg);
    }

    25% {
        transform-origin: bottom right;
        transform: rotate(3deg);
    }

    75% {
        transform-origin: bottom right;
        transform: rotate(-3deg);
    }
}

.right .balloon_two {
    position: absolute;
    top: 170px;
    right: -65px;
    z-index: -1;
    transform: rotate(10deg);
    animation: balloon2 2s infinite linear;
}

@keyframes balloon2 {

    0%,
    50%,
    100% {
        transform-origin: bottom left;
        transform: rotate(10deg);
    }

    25% {
        transform-origin: bottom left;
        transform: rotate(7deg);
    }

    75% {
        transform-origin: bottom left;
        transform: rotate(13deg);
    }
}
/* ... */

